--- a/src/graphicInterface/register/register.fxml
+++ b/src/graphicInterface/register/register.fxml
@@ -25,20 +25,20 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
-    <Label text="Inscription" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
-    <Label text="Nom" GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+    <Label text="Register" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
+    <Label text="Name" GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <Label text="Prenom" GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+    <Label text="Surname" GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="2"/>
     <Label text="Mail" GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
-    <Label text="Identifiant" GridPane.halignment="CENTER" GridPane.rowIndex="4"/>
+    <Label text="Username" GridPane.halignment="CENTER" GridPane.rowIndex="4"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="3"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-    <Label text="Mot de passe" GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
-    <Label text="Date de Naissance" GridPane.halignment="CENTER" GridPane.rowIndex="6"/>
+    <Label text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
+    <Label text="BirthDate" GridPane.halignment="CENTER" GridPane.rowIndex="6"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-    <Button mnemonicParsing="false" text="Annuler" GridPane.halignment="CENTER" GridPane.rowIndex="7"/>
-    <Button mnemonicParsing="false" text="Valider" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+    <Button mnemonicParsing="false" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="7"/>
+    <Button mnemonicParsing="false" text="OK" GridPane.columnIndex="1" GridPane.halignment="CENTER"
             GridPane.rowIndex="7"/>
     <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 </GridPane>
